<resources>
    <string name="app_name">hack</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="user">user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_profile_text" >Номер профиля</string>
    <string name="status" >Частное лицо</string>
    <string name="location" >г. Москва</string>
    <string name="user_name" >Пакетное решение</string>
    <string name="name_profile_fragment" >Профиль</string>
    <string name="user_email" >packetsolution@yandex.ru</string>
    <string name="reg_data" >С апреля 2023 ты с нами!</string>
    <string name="user_id" >293</string>
    <string name="text_edit">Редактировать</string>
    <string name="text_favourite">Избранное</string>
    <string name="name_edit_user_activity">Редактирование профиля</string>
    <string name="edit_pas">Изменить</string>
    <string name="save_text">Сохранить</string>
    <string name="old_pas">Старый пароль</string>
    <string name="new_pas">Новый пароль</string>
    <string name="edit_pasw">Изменение пароля</string>
</resources>