<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>


        <TextView
            android:id="@+id/name_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="@string/name_profile_fragment"
            android:textColor="@color/false_black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--info-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/name_fragment">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/false_black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textColor="@color/false_black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/status"
                android:textColor="@color/false_black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/id_profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/id_profile_text"
                android:textColor="@color/false_black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status" />

            <TextView
                android:id="@+id/id_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_id"
                android:textColor="@color/false_black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/id_profile_text"
                app:layout_constraintTop_toBottomOf="@+id/status" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Logo-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@+id/name_fragment"
            app:srcCompat="@drawable/avatar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_data_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/info_layout"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textColor="@color/grey_figma"
                android:drawablePadding="5dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableLeftCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="@string/reg_data"
                android:textColor="@color/grey_figma"
                android:textSize="12sp"
                app:drawableLeftCompat="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_btn"
            app:layout_constraintWidth_percent="0.92"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rectangle_2"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/email_data_layout"
            android:text="@string/text_edit"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/green"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:onClick="editBtn"/>

        <TextView
            android:id="@+id/text_favourite"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.92"
            android:layout_height="wrap_content"
            android:text="@string/text_favourite"
            android:textColor="@color/false_black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/edit_btn"
            android:layout_marginTop="40dp"/>

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/text_favourite"
            android:id="@+id/recycler_view"
            app:layout_constraintWidth_percent="0.92"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
