<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_centerSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_startSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_endSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_arrowback"
        app:backgroundTint="@color/false_black"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/name_edit_user_activity"
        android:textColor="@color/false_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gl_startSec"
        app:layout_constraintEnd_toStartOf="@id/gl_endSec"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/name_activity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/ic_camera"
        app:borderWidth="0dp"
        app:fabCustomSize="40dp"
        android:scaleType="center"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/name_activity"
        android:onClick="editPhoto"
        />

     <ru.packetSolution.hack.views.InputField
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="@id/gl_start"
         app:layout_constraintEnd_toStartOf="@id/gl_end"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/logo"
         app:hint="Пакетное решение"
         android:inputType="text"
         android:id="@+id/name"
         app:hint_color="@color/hint_color"
         app:title="Имя:" />
     <ru.packetSolution.hack.views.InputField
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="@id/gl_start"
         app:layout_constraintEnd_toStartOf="@id/gl_end"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/name"
         app:hint="packetsolution@yandex.ru"
         android:inputType="text"
         android:id="@+id/email"
         app:hint_color="@color/hint_color"
         app:title="Почта:" />
     <ru.packetSolution.hack.views.InputField
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="@id/gl_start"
         app:layout_constraintEnd_toStartOf="@id/gl_end"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/email"
         app:hint="+8 800 555-35-35"
         android:inputType="text"
         android:id="@+id/phone"
         app:hint_color="@color/hint_color"
         app:title="Телефон:" />
     <ru.packetSolution.hack.views.InputField
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="@id/gl_start"
         app:layout_constraintEnd_toStartOf="@id/gl_end"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/phone"
         app:hint="г.Москва"
         android:inputType="text"
         android:id="@+id/location"
         app:hint_color="@color/hint_color"
         app:title="Город:" />
     <ru.packetSolution.hack.views.InputField
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="@id/gl_start"
         app:layout_constraintEnd_toStartOf="@id/gl_center"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/location"
         app:hint="******"
         android:inputType="text"
         android:id="@+id/password"
         app:hint_color="@color/hint_color"
         app:title="Пароль:" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editPas_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rectangle_2"
        android:text="@string/edit_pas"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/red_figma"
        app:layout_constraintEnd_toStartOf="@id/gl_center"
        app:layout_constraintStart_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintWidth_percent="0.4"
        android:onClick="editPas"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toEndOf="@id/gl_startSec"
        app:layout_constraintEnd_toStartOf="@id/gl_endSec"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:text="@string/save_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/green"
        android:textAllCaps="false"
        android:onClick="saveInfo"
        android:layout_marginTop="40dp" />



</androidx.constraintlayout.widget.ConstraintLayout>